fixed toggle dark mode button click on mobile view

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -61,7 +61,4 @@ body {
 
 @import "./_overview.scss";
 
-.card {
-}
-
 @import "./footer";
